--- a/samples/patient-demographics-example/app/index.html
+++ b/samples/patient-demographics-example/app/index.html
@@ -8,6 +8,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/angularjs-datepicker/dist/angular-datepicker.min.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -32,6 +33,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-logger/dist/angular-logger.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angularjs-datepicker/dist/angular-datepicker.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
