--- a/samples/patient-demographics-example/app/index.html
+++ b/samples/patient-demographics-example/app/index.html
@@ -34,6 +34,7 @@
     <script src="bower_components/angular-logger/dist/angular-logger.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/angularjs-datepicker/dist/angular-datepicker.min.js"></script>
+    <script src="bower_components/angular-ui-mask/dist/mask.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
