--- a/samples/patient-demographics-example/app/index.html
+++ b/samples/patient-demographics-example/app/index.html
@@ -43,6 +43,7 @@
     <script src="scripts/patient/patient.js"></script>
     <script src="scripts/patient/patientservice.js"></script>
     <script src="scripts/common/ssn-filter.js"></script>
+    <script src="scripts/common/tel-filter.js"></script>
     <script src="scripts/patient/demographics/demographics.js"></script>
     <script src="scripts/patient/demographics/basicinfo.js"></script>
     <script src="scripts/patient/demographics/contactinfo.js"></script>
