--- a/samples/angular-patient-demographics-example/app/scripts/patient/demographics/demographics.view.html
+++ b/samples/angular-patient-demographics-example/app/scripts/patient/demographics/demographics.view.html
@@ -8,7 +8,7 @@
     </li>
     <li ng-click="vm.changeTab(vm.TABS.CONTACTS)"
         ng-class="{active: vm.inContactsTab()}">
-          <a nohref>Contact</a>
+          <a nohref>Contacts</a>
     </li>
     <li><a nohref ng-click="vm.mockedTab()">Choices</a></li>
     <li><a nohref ng-click="vm.mockedTab()">Employer</a></li>
