--- a/samples/react-redux-patient-demographics-example/src/index.html
+++ b/samples/react-redux-patient-demographics-example/src/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h1>Patient Overview</h1>
-    <div id="root" style="height: 100%"></div>
+    <div id="root"></div>
   </div>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
